fix: throw error when Codecov fails

--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -48,7 +48,11 @@ pipeline {
                     sh "echo 'generating coverage report'"
                     sh "./gradlew codeCoverageReport"
                     sh "echo 'send it to codecov'"
-                    sh "curl -s https://codecov.io/bash | bash"
+                    codecov_stdout = sh(script:"curl -s https://codecov.io/bash | bash", returnStdout: true)
+                    echo codecov_stdout
+                    if((codecov_stdout =~ /(.*)404(.*)/).find(0)){
+                        error "Codecov report publish fail(404)"
+                    }
                 }
             }
             post{
