--- a/api/src/main/resources/application-local.yaml
+++ b/api/src/main/resources/application-local.yaml
@@ -12,3 +12,6 @@ spring:
     generate-ddl: true
     database: mysql
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
+bbolab:
+  fileservice:
+    root: "./"
