feat: add dependency for geojson

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects {
         maven {url "https://repo.osgeo.org/repository/release/"}
         mavenLocal()
         mavenCentral()
+        jcenter()
     }
 }
 
