--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,6 @@
+repositories {
+    maven { url 'https://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+}
 dependencies {
     // spring
     implementation 'org.springframework.boot:spring-boot-starter'
@@ -13,7 +16,12 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     // geo
-    implementation group: 'org.geotools', name: 'gt-shapefile', version: '25.0'
+    implementation group: 'org.geotools', name: 'gt-shapefile', version: '25.1'
+    implementation group: 'org.geotools', name: 'gt-geojson', version: '25.1'
+    implementation group: 'org.geotools', name: 'gt-epsg-hsql', version: '25.1'
+    implementation group: 'org.geotools', name: 'gt-epsg-extension', version: '25.1'
+    implementation group: 'org.locationtech.proj4j', name: 'proj4j', version: '1.1.3' // for transform coordinates
+    implementation group: 'com.mapbox.mapboxsdk', name: 'mapbox-sdk-geojson', version: '5.2.1'
 
     // test
     testImplementation 'org.mockito:mockito-junit-jupiter:3.9.0'
