--- a/api/build.gradle
+++ b/api/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation group: 'org.geotools', name: 'gt-epsg-hsql', version: '25.1'
     implementation group: 'org.geotools', name: 'gt-epsg-extension', version: '25.1'
     implementation group: 'org.locationtech.proj4j', name: 'proj4j', version: '1.1.3' // for transform coordinates
+    implementation group: 'org.locationtech.spatial4j', name: 'spatial4j', version: '0.8'
     implementation group: 'com.mapbox.mapboxsdk', name: 'mapbox-sdk-geojson', version: '5.2.1'
 
     // test
