--- a/core/build.gradle
+++ b/core/build.gradle
@@ -6,7 +6,8 @@ dependencies {
 
     // database
     runtimeOnly 'mysql:mysql-connector-java'
-    implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '5.4.31.Final'
+    implementation group: 'org.locationtech.jts', name: 'jts-core', version: '1.18.1'
+    implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '5.5.4.Final'
 
     // lombok
     implementation 'org.projectlombok:lombok'
