feat: fix broken tests
fix heap overflow when updating RegionL3 data by pageable querying

Former-commit-id: 9dc01db32748b395d597309186299b0cdd22ee24

--- a/api/src/test/resources/application-test.yaml
+++ b/api/src/test/resources/application-test.yaml
@@ -9,4 +9,12 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
+    properties:
+      hibernate:
+        jdbc:
+          batch_size: 100
 
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type: TRACEs
