(fix) import missing jasypt module in admin

--- a/admin/build.gradle
+++ b/admin/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
 
+    // jasypt
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
+    
     implementation project(":core")
 }
 
