--- a/api/build.gradle
+++ b/api/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.retry:spring-retry'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // spring cloud
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.2'
@@ -49,6 +50,9 @@ dependencies {
 
     // for Geometry type
     compile group: 'org.locationtech.jts', name: 'jts-core', version: '1.15.1'
+
+    // parse bbox string
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
     // lombok
     implementation 'org.projectlombok:lombok'
