--- a/api/build.gradle
+++ b/api/build.gradle
@@ -38,11 +38,22 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.retry:spring-retry'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     // spring cloud
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.2'
     implementation 'org.springframework.cloud:spring-cloud-starter-config:3.0.3'
-    
+
+    // spring swagger2
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+    // for Geometry type
+    compile group: 'org.locationtech.jts', name: 'jts-core', version: '1.15.1'
+
+    // parse bbox string
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+
     // lombok
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
