--- a/api/src/main/resources/application-local.yaml
+++ b/api/src/main/resources/application-local.yaml
@@ -12,6 +12,38 @@ spring:
     generate-ddl: true
     database: mysql
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
+  security:
+    oauth2:
+      client:
+        registration:
+          naver:
+            clientId: 7FABWrAV9GkXs7Zt7lVr
+            clientSecret: kWXadh5jgl
+            client-name: Naver
+            scope: profile
+            redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
+            authorization-grant-type: authorization_code
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
 bbolab:
   fileservice:
     root: "./"
+
+security:
+  auth:
+    tokenSecret: THISISGAONNATESTKEY
+    accessTokenExpireTime: 1800000
+    refreshTokenExpireTime: 1209600000
+
+  oauth2:
+    authorizedRedirectUris:
+      - http://localhost:8080/oauth2/redirect
+
+logging:
+  level:
+    root: info
