feat: OAuth2 네이버 로그인  [GAON-13]
 - OAuth2 인증 시 클라이언트가 인증 성공 후 redirect url을 요청했을 경우 모두 거절 ( 인증 성공 후 redirect 미지원) 
 -  Security 및 Exception 패키지 구조 변경, Jwt exception은 모두 JwtTokenAuthentcationEntryPoint에서 진행
 - FE와 Error response 표준화를 위한 ErrorCode 적용
 - 불필요 파일 삭제 (index.html)
 - RefreshToken 저장을 위한 레포지토리 정의 및 임시 메모리 레포지토리로 구현
 - Role 적용 (Guest, User, Admin)
 - security properties jasypt 적용
TODO : Refresh request, RedisRefreshTokenRepository 구현 필요, kakao 로그인

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 
+    // spring security oauth2.0
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
     // for Geometry type
     compile group: 'org.locationtech.jts', name: 'jts-core', version: '1.15.1'
 
@@ -68,6 +72,9 @@ dependencies {
 
     // jasypt
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
+
+    // for annotation processor
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
     // project dependency
     implementation project(":core")
