--- a/api/src/main/resources/application-local.yaml
+++ b/api/src/main/resources/application-local.yaml
@@ -23,13 +23,25 @@ spring:
             scope: profile
             redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
             authorization-grant-type: authorization_code
+          kakao:
+            clientId: c1991c38f4f71873ec0e76c9106348af
+            clientSecret: V6pHGRoDBWDTSIKqFrGyORfvgAt4KCNz
+            client-authentication-method: post
+            client-name: Kakao
+            scope: 'account_email,profile_image,profile_nickname'
+            redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
+            authorization-grant-type: authorization_code
         provider:
           naver:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             token-uri: https://nid.naver.com/oauth2.0/token
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
-
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 bbolab:
   fileservice:
     root: "./"
@@ -47,3 +59,9 @@ security:
 logging:
   level:
     root: info
+
+jasypt:
+  encryptor:
+    password: ${GAONNA_KEY}
+    algorithm: PBEWithMD5AndDES
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
