--- a/api/src/test/resources/application-test.yaml
+++ b/api/src/test/resources/application-test.yaml
@@ -9,4 +9,56 @@ spring:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
+  security:
+    oauth2:
+      client:
+        registration:
+          naver:
+            clientId: 7FABWrAV9GkXs7Zt7lVr
+            clientSecret: kWXadh5jgl
+            client-name: Naver
+            scope: profile
+            redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
+            authorization-grant-type: authorization_code
+          kakao:
+            clientId: c1991c38f4f71873ec0e76c9106348af
+            clientSecret: V6pHGRoDBWDTSIKqFrGyORfvgAt4KCNz
+            client-authentication-method: post
+            client-name: Kakao
+            scope: 'account_email,profile_image,profile_nickname'
+            redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
+            authorization-grant-type: authorization_code
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+bbolab:
+  fileservice:
+    root: "./"
 
+security:
+  auth:
+    tokenSecret: TOKENSECRET
+    accessTokenExpireTime: 1800000
+    refreshTokenExpireTime: 1209600000
+
+  oauth2:
+    authorizedRedirectUris:
+#      - http://localhost:8080/oauth2/redirect
+
+logging:
+  level:
+    root: info
+
+jasypt:
+  encryptor:
+    password: ${GAONNA_KEY}
+    algorithm: PBEWithMD5AndDES
+    iv-generator-classname: org.jasypt.iv.NoIvGenerator
