--- a/api/build.gradle
+++ b/api/build.gradle
@@ -2,9 +2,8 @@ plugins{
     id 'com.google.cloud.tools.jib'
 }
 jib {
-    allowInsecureRegistries = true
     from {
-        image = "harbor.gaonna.tech/base_docker_images/openjdk:11"
+        image = "openjdk:11"
     }
     to {
         image = "gaonna_platform/api:latest"
